--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,8 +1,7 @@
 all: a clean
 
-a: main.o #libmylib.a#libmylib.a is the dependency for the executable
-		gcc -w -lm -o a main.o 
-		#  -L. -lmylib previous end of the last line
+a: main.o libmylib.a#libmylib.a is the dependency for the executable
+		gcc -w -lm -o a main.o -L. -lmylib
 
 main.o : main.c Libinteractive.o Libmovement.o Libmovement.o
 		gcc -w -Wall -g -c main.c -o main.o
@@ -16,10 +15,10 @@ Libavaliable.o: ../Lib/Libavaliable.c ../Lib/Libavaliable.h
 Libmovement.o: ../Lib/Libmovement.c ../Lib/Libmovement.h 
 		gcc -w -Wall -g -c ../Lib/Libmovement.c -o Libmovement.o
 
-# libmylib.a: Libinteractive.o Libavaliable.o Libmovement.o #let's link library files into a static library
-# 		ar rcs libmylib.a Libinteractive.o Libavaliable.o Libmovement.o
+libmylib.a: Libinteractive.o Libavaliable.o Libmovement.o #let's link library files into a static library
+		ar rcs libmylib.a Libinteractive.o Libavaliable.o Libmovement.o
 
-# libs: libmylib.a
+libs: libmylib.a
 
 clean:
 		rm -f *.o *.a *.gch #This way is cleaner than your clean
